--- a/po/zh_Hans.po
+++ b/po/zh_Hans.po
@@ -7,17 +7,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-05-06 07:53+0000\n"
+"PO-Revision-Date: 2025-05-23 15:58+0000\n"
 "Last-Translator: Outbreak2096 <outbreak2096@noreply.codeberg.org>\n"
 "Language-Team: Chinese (Simplified Han script) <https://"
-"translate.codeberg.org/projects/de-swsnr-pictureoftheday/de-swsnr-"
-"pictureoftheday/zh_Hans/>\n"
+"translate.codeberg.org/projects/de-swsnr-pictureoftheday/"
+"de-swsnr-pictureoftheday/zh_Hans/>\n"
 "Language: zh_Hans\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 5.10.2\n"
+"X-Generator: Weblate 5.11.4\n"
 
 #. Translators: Do feel free to translate the application name
 #: de.swsnr.pictureoftheday.desktop:3 de.swsnr.pictureoftheday.metainfo.xml:5
@@ -130,7 +130,7 @@ msgstr "作品"
 
 #: de.swsnr.pictureoftheday.metainfo.xml:49
 msgid "Change license to European Union Public License 1.2."
-msgstr ""
+msgstr "将许可证更改为 European Union Public License 1.2。"
 
 #: de.swsnr.pictureoftheday.metainfo.xml:55
 msgid ""
@@ -429,19 +429,19 @@ msgstr "帮助和灵感"
 #: src/app.rs:153
 msgctxt "about-dialog.acknowledgment-section"
 msgid "Helpful services"
-msgstr "有用的服务"
+msgstr "辅助服务"
 
 #. Translators: Use translated app name from https://flathub.org/apps/de.swsnr.turnon
 #: src/app.rs:165
 msgctxt "about-dialog.other-app.name"
 msgid "Turn On"
-msgstr ""
+msgstr "Turn On"
 
 #. Translators: Use translated app summary from https://flathub.org/apps/de.swsnr.turnon
 #: src/app.rs:170
 msgctxt "about-dialog.other-app.summary"
 msgid "Turn on devices in your network"
-msgstr ""
+msgstr "打开网络中的设备"
 
 #: src/app.rs:188
 msgctxt "notification.title"
@@ -716,6 +716,14 @@ msgid ""
 "\n"
 "%2"
 msgstr ""
+"版权所有 Sebastian Wiesner &lt;sebastian@swsnr.de&gt;\n"
+"\n"
+"根据 EUPL 1.2 条款授权。您可以在 <a href=\"%1\">%1</a> "
+"找到许可证文本的官方译本。\n"
+"\n"
+"完整的英文文本如下。\n"
+"\n"
+"%2"
 
 #: src/images/source.rs:58
 msgctxt "source name"
