Update translation German
Translated with Weblate.

Currently translated at 100.0% (145 of 145 strings)

Co-authored-by: Sebastian Wiesner <sebastian@swsnr.de>
Translate-URL: https://translate.codeberg.org/projects/de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/
Translation: Picture Of The Day/Picture Of The Day

--- a/po/de.po
+++ b/po/de.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.picture-of-the-day\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-05-22 09:46+0000\n"
+"PO-Revision-Date: 2025-06-09 19:58+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -136,6 +136,8 @@ msgstr "Kunstwerk"
 #: de.swsnr.pictureoftheday.metainfo.xml:49
 msgid "Drag images out of the app to copy them into other apps."
 msgstr ""
+"Bilder können aus der Anwendung gezogen werden, um sie in andere Anwendungen "
+"zu kopieren."
 
 #: de.swsnr.pictureoftheday.metainfo.xml:58
 msgid "Change license to European Union Public License 1.2."
