--- a/po/et.po
+++ b/po/et.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-05-23 15:58+0000\n"
+"PO-Revision-Date: 2025-06-09 19:58+0000\n"
 "Last-Translator: Priit Jõerüüt <jrtcdbrg@noreply.codeberg.org>\n"
-"Language-Team: Estonian <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/et/>\n"
+"Language-Team: Estonian <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/et/>\n"
 "Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -136,7 +136,7 @@ msgstr "Kunst"
 
 #: de.swsnr.pictureoftheday.metainfo.xml:49
 msgid "Drag images out of the app to copy them into other apps."
-msgstr ""
+msgstr "Lohistades saad pilte teistesse rakendustesse kopeerida."
 
 #: de.swsnr.pictureoftheday.metainfo.xml:58
 msgid "Change license to European Union Public License 1.2."
