--- a/po/es.po
+++ b/po/es.po
@@ -7,33 +7,35 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"PO-Revision-Date: 2025-06-16 03:58+0000\n"
+"Last-Translator: Arturocli <arturocli@noreply.codeberg.org>\n"
+"Language-Team: Spanish <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/es/>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.11.4\n"
 
 #. Translators: Do feel free to translate the application name
 #: de.swsnr.pictureoftheday.desktop:3 de.swsnr.pictureoftheday.metainfo.xml:5
 #: resources/ui/application-window.blp:10
 msgid "Picture Of The Day"
-msgstr ""
+msgstr "Imagen del Día"
 
 #: de.swsnr.pictureoftheday.desktop:4
 msgid "A daily picture as your wallpaper"
-msgstr ""
+msgstr "Una imagen diaria como tu fondo de pantalla"
 
 #. Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 #: de.swsnr.pictureoftheday.desktop:10
 msgid "Gnome;GTK;Picture;Day;Wallpaper;"
-msgstr ""
+msgstr "Gnome;GTK;Imagen;Día;Fondo de pantalla;"
 
 #: de.swsnr.pictureoftheday.desktop:17
 msgid "Preferences"
-msgstr ""
+msgstr "Preferencias"
 
 #: de.swsnr.pictureoftheday.gschema.xml:5
 msgid "The identifier the selected source."
@@ -49,6 +51,10 @@ msgid ""
 "fine, but if you find that you are rate-limited, you may wish to use your "
 "own API key, which you can obtain free of charge at https://api.nasa.gov/."
 msgstr ""
+"La clave API que se utiliza para las solicitudes a la API APOD. La clave por "
+"defecto suele ser suficiente, pero si se encuentra con una tasa limitada de "
+"velocidad, es posible que desee utilizar su propia clave API, que puede "
+"obtener de forma gratuita en https://api.nasa.gov/."
 
 #: de.swsnr.pictureoftheday.gschema.xml:24
 msgid "Collections from Stålenhag which to ignore."
@@ -56,29 +62,31 @@ msgstr ""
 
 #: de.swsnr.pictureoftheday.metainfo.xml:6
 msgid "Your daily wallpaper"
-msgstr ""
+msgstr "Tu fondo de pantalla diario"
 
 #: de.swsnr.pictureoftheday.metainfo.xml:8
 msgid ""
 "Get a picture of the day from the following sources and use as your daily "
 "wallpaper."
 msgstr ""
+"Obtén la imagen del día de las siguientes fuentes y utilízala como fondo de "
+"pantalla diario."
 
 #: de.swsnr.pictureoftheday.metainfo.xml:10
 msgid "NASA Astronomy Picture of the Day"
-msgstr ""
+msgstr "Imagen del día Astronomía de la NASA"
 
 #: de.swsnr.pictureoftheday.metainfo.xml:11
 msgid "Bing"
-msgstr ""
+msgstr "Bing"
 
 #: de.swsnr.pictureoftheday.metainfo.xml:12
 msgid "Simon Stålenhag Artwork"
-msgstr ""
+msgstr "Obras de Simon Stålenhag"
 
 #: de.swsnr.pictureoftheday.metainfo.xml:13
 msgid "Wikimedia Picture of the Day"
-msgstr ""
+msgstr "Imagen del Día Wikimedia"
 
 #: de.swsnr.pictureoftheday.metainfo.xml:14
 msgid "Earth Science Picture of the Day"
